--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
 
     triggers:
       - schedule:
-          cron: '0 */5 * * *'
+          cron: '* * * * *'
           filters:
             branches:
               only:
